--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -40,7 +40,21 @@
     opacity: 0.75;
 }
 
+.road {
+    background: rgb(138,138,138);
+    background: linear-gradient(180deg, rgba(138,138,138,1) 0%, rgba(162,162,162,1) 50%, rgba(138,138,138,1) 100%);
+    height: 120px;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
+}
 
+    .road hr {
+        vertical-align: middle;
+        border-bottom: 10px dashed white;
+        padding-top: 50px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 
 body {
     background: #666666;
@@ -85,38 +99,6 @@ textarea {
 .div-center {
     display: inline-block;
     float: none;
-}
-
-#clock {
-    display: flex;
-    display: -webkit-flex;
-    margin-top: 20px;
-    width: 400px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 80px;
-    color: white;
-}
-
-.unit {
-    height: 100%;
-    text-align: center;
-    width: 35%;
-    color: white;
-}
-
-.masthead {
-    min-height: 30rem;
-    display: block;
-    width: 100%;
-    height: 550px;
-    padding-top: 20rem;
-    padding-bottom: 20rem;
-    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("../Content/img/headerbg.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    text-align: center;
 }
 
 #studentnavicons {
@@ -189,14 +171,6 @@ a.navbar-brand {
     text-indent: -9999px; /* hides the link text */
 }
 
-.intro {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    width: 100%;
-    background-color: #d7d8d9;
-    margin: auto;
-    height: auto;
-}
 
 .btn-primary {
     color: #fff;
@@ -206,20 +180,6 @@ a.navbar-brand {
     color: #fff;
 }
 
-.banner {
-    background: url(../Content/img/adminBackground.png);
-    width: 100%;
-    margin: auto;
-    padding-top: 70px;
-    padding-bottom: 70px;
-    height: auto;
-}
-
-.banner hr {
-    border-color: #F05F40;
-    border-width: 3px;
-    max-width: 200px;
-}
 
 .form p {
     color: white;
@@ -247,6 +207,25 @@ a.navbar-brand {
     color: #fff;
 }
 
+/*        Kiosk Page           */
+
+#clock {
+    display: flex;
+    display: -webkit-flex;
+    margin-top: 20px;
+    width: 400px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 80px;
+    color: white;
+}
+
+.unit {
+    height: 100%;
+    text-align: center;
+    width: 35%;
+    color: #3e4444;
+}
+
 #avatar {
     border: 10px solid white;
     border-radius: 200px;
@@ -272,7 +251,7 @@ a.navbar-brand {
     overflow-x: hidden;
     max-width: 100%;
     min-height: 550px;
-    columns: 100px 4;
+    columns: 100px 3;
 
 }
 
@@ -283,13 +262,13 @@ a.navbar-brand {
 }
 
 #avatarsidebar {
-    height: 470px;
+    height: 500px;
     margin-bottom: 30px;
 }
 
-.kiosk {
-    opacity: 0.7;
-    filter: alpha(opacity=70);
+.kioskModule {
+    opacity: 0.9;
+    filter: alpha(opacity=90);
     background: #3e4444;
     border-radius: 20px;
     box-shadow: 0 4px 10px 4px rgba(62, 68, 68, .3);
@@ -298,33 +277,74 @@ a.navbar-brand {
     color: white;
 }
 
-.kiosk h1{
-    color: white;
+#kioskbackground h1 {
+    font-family: 'Ubuntu', sans-serif;
+    color: #3e4444;
+    font-size: 50px;
 }
 
-.kiosk h2 {
+.kioskModule h2 {
         color: white;
         font-size: 50px;
         font-family: 'Ubuntu', sans-serif;
-}
-
-.road {
-    background: rgb(138,138,138);
-    background: linear-gradient(180deg, rgba(138,138,138,1) 0%, rgba(162,162,162,1) 50%, rgba(138,138,138,1) 100%);
-    height: 120px;
-    border-top: 5px solid white;
-    border-bottom: 5px solid white;
-}
-
-.road hr {
-    vertical-align: middle;
-    border-bottom: 10px dashed white;
-    padding-top: 50px;
-    margin-top:0px;
-    margin-bottom:0px;
 }
 
 .kioskbtn {
     font-size: 40px;
     margin-bottom:40px;
 }
+
+#box {
+    margin-bottom:40px;
+}
+
+#kioskbackground {
+    background-image: url("../Content/img/daytimeBackground.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 800px;
+}
+/**** End Kiosk Page CSS */
+
+
+/*    Homepage CSS   BEG     */
+.masthead {
+    min-height: 30rem;
+    display: block;
+    width: 100%;
+    height: 550px;
+    padding-top: 20rem;
+    padding-bottom: 20rem;
+    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("../Content/img/headerbg.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    text-align: center;
+}
+
+.banner hr {
+    border-color: #F05F40;
+    border-width: 3px;
+    max-width: 200px;
+}
+
+.intro {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 100%;
+    background-color: #d7d8d9;
+    margin: auto;
+    height: auto;
+}
+
+.banner {
+    background: url(../Content/img/adminBackground.png);
+    width: 100%;
+    margin: auto;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    height: auto;
+}
+/*********** Homepage CSS   END ******************/
