Add buttons to market to buy and sell

--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -28,9 +28,26 @@
             <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
             <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
         </div>
-        <img src="~/Content/img/Student Market/market_mockup2.png" width="800"class="img-responsive" id="wireframe-student" />
+  
     </div>
-</div>
+    <div class="row">
+        <div class="col-md-12">
+            <img src="~/Content/img/Student Market/market_mockup2.png" width="800" class="img-responsive" id="wireframe-student" />
+
+            <div class="col-md-4">
+
+                <div style="float:right;" align="center">
+                    @Html.ActionLink("Sell", "MarketAfter", "Student", null, new { @class = "btn btn-primary" })
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div style="float:right;" align="center">
+                    @Html.ActionLink("Buy", "MarketAfter", "Student", null, new { @class = "btn btn-primary" })
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
 
