--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -70,6 +70,18 @@ h1 {
     font-weight: 800;
 }
 
+.scroll-bar-horz {
+    position: absolute;
+    border: 1px solid black; 
+    width: 1300px; 
+    height: 200px; 
+    overflow-y: hidden; 
+    overflow-x: scroll;
+    margin: 50px;
+    margin-left:270px;
+}
+
+
 .student-header {
     padding-top: 0px;
     font-size: 5.9vw;
@@ -134,6 +146,13 @@ textarea {
     margin-right: auto
 }
 
+.shop-scroll {
+    display: inline;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 
 #studentnaviconstext {
     position: relative;
@@ -163,10 +182,10 @@ a.navbar-brand {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    margin-top: 15px;
+    margin-top: 10px;
     margin-right: 20px;
     display: block;
-    width: 50px;
+    width: 35px;
     height: 50px;
     text-indent: -9999px; /* hides the link text */
 }
@@ -347,4 +366,6 @@ a.navbar-brand {
     padding-bottom: 70px;
     height: auto;
 }
+
+
 /*********** Homepage CSS   END ******************/
