--- a/5051/Views/Kiosk/NewProfile.cshtml
+++ b/5051/Views/Kiosk/NewProfile.cshtml
@@ -1,80 +1,71 @@
-﻿@model _5051.Models.StudentViewModel
+﻿@model _5051.Models.StudentModel
 
 @{
     ViewBag.Title = "Kiosk Mode - New Student Profile";
 }
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 <div id="background2">
-    <div class="row">
-        <div class="form">
+        <div class="row">
+            <div class="form">
 
-            <div class="row">
-                <div class="col-md-6">
-                    @Html.ActionLink("< Back", "Index", "Kiosk", null, new { @class = "btn btn-primary btn-sm" })
-                    <br /><br />
-                    <p class="text-white"><strong>Create a new profile.</strong></p>
+                <div class="row">
+                    <div class="col-md-6">
+                        @Html.ActionLink("< Back", "Index", "Kiosk", null, new { @class = "btn btn-primary btn-sm" })
+                        <br /><br />
+                        <p class="text-white"><strong>Create a new profile.</strong></p>
+                    </div>
+
                 </div>
 
+
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.Id)
+
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Enter your Name" />
+                            </div>
+                            <p>@Html.ValidationMessageFor(m => m.Name)</p>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-camera fa" aria-hidden="true"></i></span>
+                                @Html.DropDownListFor(m => m.AvatarId, _5051.Backend.AvatarBackend.Instance.GetAvatarListItem(Model.AvatarId))
+                            </div>
+                            <h4>@Html.ValidationMessageFor(m => m.AvatarId)</h4>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-smile fa" aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="cols-sm-10">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                                <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group ">
+                        <input type="submit" value="Create" class="button button-block">
+                    </div>
+
+                }
             </div>
-
-
-            <form class="" method="post" action="#">
-
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Enter your Name" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-hashtag fa" aria-hidden="true"></i></span>
-                            <input type="number" class="form-control" name="number" id="studentID" placeholder="Enter your Student ID" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-smile fa" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="username" id="username" placeholder="Enter your Username" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                            <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></span>
-                            <input type="number" class="form-control" name="phone" id="phone" placeholder="Enter your phone number" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="cols-sm-10">
-                        <div class="input-group">
-                            <input type="checkbox" id="textmsg" name="textmsg" value="1">
-                        </div><p>Opt in for text messages</p>
-                    </div>
-                </div>
-                <div class="form-group ">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-primary">Reset</button>
-                </div>
-
-            </form>
-
         </div>
-        </div>
-
     </div>
