--- a/5051/Content/bootstrap.css
+++ b/5051/Content/bootstrap.css
@@ -426,7 +426,7 @@ cite {
 }
 
 .text-muted {
-  color: #999999;
+    color: #999999;
 }
 
 .text-primary {
@@ -2090,20 +2090,20 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-  color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+    color: #ffffff;
+    background-color: #3f3f3f;
+    border-color: #3f3f3f;
 }
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
-}
+    .btn-primary:hover,
+    .btn-primary:focus,
+    .btn-primary:active,
+    .btn-primary.active,
+    .open .dropdown-toggle.btn-primary {
+        color: #ffffff;
+        background-color: #727272;
+        border-color: #727272;
+    }
 
 .btn-primary:active,
 .btn-primary.active,
