--- a/5051/Views/Kiosk/Landing.cshtml
+++ b/5051/Views/Kiosk/Landing.cshtml
@@ -20,7 +20,7 @@
             {
                 @Html.AntiForgeryToken()
                 <div class="form-group">
-                    <div class="cols-sm-10">
+                    <div class="cols-md-6 col-md-offset-3 text-center">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
