--- a/5051/Views/Portal/AdminLogin.cshtml
+++ b/5051/Views/Portal/AdminLogin.cshtml
@@ -9,9 +9,9 @@
     <div class="row text-center">
         <div class="form">
 
-            <div id="login">
+            <div id="login ">
                 <h1 style="font:Lato, sans-serif"> Welcome to Admin Portal! </h1>
-
+                <div class="cols-md-6 col-md-offset-3 text-center">
                 <form action="/" method="post">
 
                     <div class="field-wrap">
@@ -27,12 +27,13 @@
                         </label>
                         <input type="password" required autocomplete="off" />
                     </div>
-
+                    </div>
                     <p class="forgot"><a href="#">Forgot Password?</a></p>
 
                     <a href="~/Admin/Index" class="button button-block" role="button">Log In</a>
 
                 </form>
+                   
 
             </div>
 
