--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -13,7 +13,7 @@
                     <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1>
 
                     <form action="/" method="post">
-
+                        <div class="cols-md-6 col-md-offset-3 text-center">
                         <div class="field-wrap">
                             <label>
                                 Email Address<span class="req">*</span>
@@ -27,6 +27,8 @@
                             </label>
                             <input type="password" required autocomplete="off" />
                         </div>
+
+                            </div>
 
                         <p class="forgot"><a href="#">Forgot Password?</a></p>
 
