hide students where status is hold

--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -60,7 +60,7 @@
                                                     </li>
 
                                                 }
-                                                else
+                                                else if (item.Status == _5051.Models.StudentStatusEnum.Out)
                                                 {
                                                     <li>
                                                         <div class="serviceBox">
