--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -10,9 +10,7 @@
 <div id="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Community</h1>
-
-        <p class="student-text-medium">Visit friends!</p>
-        <p class="student-text-small">Total coins: 434</p>
+        
         <div id="studentnavicons">
             <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt" style="color:#7a553b"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
@@ -24,16 +22,8 @@
 
         <div class="scroll-bar-horz">
             <p style="width:150%;">
-                <img src="~/Content/img/plants-n-pop.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/dj-flapp-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/kats-comix-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/man-cave-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/meow-cafe-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/nhus-moo-shoppe-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/sus-salon-icon.png" style="width: 250px; padding: 20px;" alt="image name">
-                <img src="~/Content/img/bobs-bananas-icon.png" style="width: 250px; padding: 20px;" alt="image name">
+                <img src="~/Content/img/townB.png" style="height: 700px; padding: 10px;" alt="Nova Town">
             </p>
         </div>
-
     </div>
 </div>
