--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -19,7 +19,7 @@
     }
 </script>
 
-<div id="background3">
+<div class="background3">
     <div class="row text-center">
         <div class="container">
             <div style="float:right;" align="center">
