--- a/5051/Views/Admin/Index.cshtml
+++ b/5051/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-    <div id="background3">
+    <div class="background3">
         <div class="row text-center">
             <h2 style="color: #fff">WELCOME TO ADMIN PORTAL</h2>
 
