--- a/5051/Views/Portal/AdminLogin.cshtml
+++ b/5051/Views/Portal/AdminLogin.cshtml
@@ -5,12 +5,12 @@
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
 
-<div id="background3">
+<div class="background3">
     <div class="row text-center">
         <div class="form">
 
             <div id="login ">
-                <h1 style="font:Lato, sans-serif"> Welcome to Admin Portal! </h1>
+                <h1> Welcome to Admin Portal! </h1>
                 <div class="cols-md-6 col-md-offset-3 text-center">
                 <form action="/" method="post">
 
