--- a/5051/Views/Portal/Index.cshtml
+++ b/5051/Views/Portal/Index.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
    
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h2>WELCOME TO STUDENT PORTAL</h2>
         <div class="col-md-6">
