--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -4,13 +4,13 @@
 
     <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-    <div id="background">
+    <div class="background">
         <div class="row text-center">
 
             <div class="form">
 
                 <div id="login">
-                    <h1 style="font:Lato, sans-serif;"> Welcome Back to Nova Town! </h1>
+                    <h1> Welcome Back to Nova Town! </h1>
 
                     <form action="/" method="post">
                         <div class="cols-md-6 col-md-offset-3 text-center">
