--- a/5051/Views/Portal/Logout.cshtml
+++ b/5051/Views/Portal/Logout.cshtml
@@ -25,7 +25,7 @@
 
 </script>
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Later!</h1>
         <div id="studentnavicons">
