--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
 
-<div id="background">
+<div class="background" id="community">
     <div class="row text-center">
         <h1 class="student-header" align="center">Community</h1>
         
