--- a/5051/Views/Student/MarketAfter.cshtml
+++ b/5051/Views/Student/MarketAfter.cshtml
@@ -16,7 +16,7 @@
 	});
 </script>
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
         <div class="row text-center">
