--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Reports";
 }
 
-    <div id="background3">
+    <div class="background3">
         <div class="container">
             <!--Support print button-->
             <script>
