--- a/5051/Views/Kiosk/Landing.cshtml
+++ b/5051/Views/Kiosk/Landing.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Kiosk Mode - New Student Profile";
 }
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
-<div id="background2">
+<div class="background2">
     <div class="row">
         <div class="form">
 
@@ -20,16 +20,14 @@
             {
                 @Html.AntiForgeryToken()
                 <div class="form-group">
-                    <div class="cols-md-6 col-md-offset-3 text-center">
+                    <div class="cols-md-8 col-md-offset-2 text-center">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                             <input type="text" class="form-control" name="passphase" id="passphase" placeholder="Enter your Passphase" />
 
                         </div>
                         <div class="form-group">
-                            <center>
                                 <button type="submit" class="btn btn-primary">Submit</button>
-                            </center>
                         </div>
                     </div>
 
