--- a/5051/Views/Kiosk/NewProfile.cshtml
+++ b/5051/Views/Kiosk/NewProfile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Kiosk Mode - New Student Profile";
 }
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
-<div id="background2">
+<div class="background2">
         <div class="row">
             <div class="form">
 
