--- a/5051/Views/Student/Accomplishments.cshtml
+++ b/5051/Views/Student/Accomplishments.cshtml
@@ -12,11 +12,11 @@
         $('#studentnavicons a').hover(
             function () {
                 $("#studentnaviconstext p").text($(this).attr("title"));
-            },
+            }
 	});
 </script>
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Yep, I did this</h1>
 
