--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -13,11 +13,11 @@
         $('#studentnavicons a').hover(
             function () {
                 $("#studentnaviconstext p").text($(this).attr("title"));
-            },
+            }
 	});
 </script>
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
             <div id="studentnavicons">
