--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
-<div id="background">
+<div class="background">
     <div class="row text-center">
         <h2 align="center">My Report</h2>
         <div class="btn-group" style="margin-right: 10px">
