minor fix on kiosk index

--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -101,7 +101,7 @@
                                 </center>
                             </div>
                         </div>
-                        <div class=kioskModule id="box">
+                        <div class="kioskModule" id="box">
                             <center>
                                 @if (t == null)
                                 {
